--- a/src/main/resources/epicDetails.vm
+++ b/src/main/resources/epicDetails.vm
@@ -8,7 +8,6 @@
 	<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.11.0.min.js"></script>
 
 	<!--style tags-->
-	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
 	$webResourceManager.requireResource("com.cobalt.jira.plugin.epic.EpicPlugin:EpicDetails-resources")
@@ -18,47 +17,67 @@
 		epicDetails.config(function($locationProvider) {
 			$locationProvider.html5Mode(true);
 		});
-		epicDetails.controller('EpicDetailsController', ['$scope', '$http', '$q', '$location', epicDetailsController]);
+		epicDetails.controller('EpicDetailsController', ['$scope', '$http', '$q', '$location', '$window', epicDetailsController]);
 		epicDetails.directive('chart', chartDirective);
 	</script>
 </head>
 <body>
 	<div ng-app="EpicDetails" ng-controller="EpicDetailsController" class="body-container">
-		<div class="btn-group">
+	
+		<h1 class="title">{{epicName}}</h1>
+	
+		<div class="btn-group work-selector">
 			<label class="btn btn-primary" ng-model="workType" btn-radio="1">Stories</label>
 			<label class="btn btn-primary" ng-model="workType" btn-radio="2">Story Points</label>
 			<label class="btn btn-primary" ng-model="workType" btn-radio="3">Work Hours</label>
 		</div>
 
-		<h1>{{epicName}}</h1>
-
-		<div class="story-list">
-			<ul>
-				<li ng-repeat="story in stories">
-					{{story.fields.summary}}
-				</li>
+		<div class="btn-group epic-dropdown" dropdown>
+			<button type="button" class="btn btn-warning dropdown-toggle">
+				{{projectName}} <span class="caret"></span>
+			</button>
+			<ul class="dropdown-menu epic-dropdown-menu" role="menu">
+				<li ng-hide="epics.length==0" ng-repeat="epic in epics" ng-click="redirect(epic.location)"><a href="#">{{epic.name}}</a></li>
 			</ul>
 		</div>
-
-		<div>
-			<progress>
-				<bar value="notStarted * 100 / (notStarted + inProgress + done)" type="info" ng-hide="notStarted <= 0"><span>{{notStarted}}</span></bar>
-				<bar value="inProgress * 100 / (notStarted + inProgress + done)" type="warning" ng-hide="inProgress <= 0"><span>{{inProgress}}</span></bar>
-				<bar value="done * 100 / (notStarted + inProgress + done)" type="success" ng-hide="done <= 0"><span>{{done}}</span></bar>
-			</progress>
-			<div class="progress-bar-key">
-				<div class="key-element"><progressBar value="100" type="info"></progressBar><span>Not Started</span></div>
-				<div class="key-element"><progressBar value="100" type="warning"></progressBar><span>In Progress</span></div>
-				<div class="key-element"><progressBar value="100" type="success"></progressBar><span>Done</span></div>
+		
+		<div class="column1">
+			<div class="progress-bar-container">
+				<progress>
+					<bar value="round(notStarted * 100 / (notStarted + inProgress + done))" type="info" ng-hide="notStarted <= 0"><span>{{format(notStarted)}}</span></bar>
+					<bar value="round(inProgress * 100 / (notStarted + inProgress + done))" type="warning" ng-hide="inProgress <= 0"><span>{{format(inProgress)}}</span></bar>
+					<bar value="round(done * 100 / (notStarted + inProgress + done))" type="success" ng-hide="done <= 0"><span>{{format(done)}}</span></bar>
+				</progress>
+				<div class="progress-bar-key">
+					<div class="key-element"><progressBar value="100" type="info"></progressBar><span>Not Started</span></div>
+					<div class="key-element"><progressBar value="100" type="warning"></progressBar><span>In Progress</span></div>
+					<div class="key-element"><progressBar value="100" type="success"></progressBar><span>Done</span></div>
+				</div>
+			</div>
+	
+			<div class="charts-container">
+				<chart ng-model="points"></chart>
 			</div>
 		</div>
-
-		<div class="clear" style="display: block; width: 450px; height: 250px">
-			<chart ng-model="points"></chart>
-		</div>
-
 		
-
+		<div class="column2">
+			<div>{{format(numofStories)}} {{workTypeToString()}} have been completed within the last 7 days.</div>
+			<div class="story-list">
+				<ul>
+					<li class="story-row" ng-repeat="story in stories">
+						<div class="comment-img">
+							<img tooltip="{{story.fields.assignee.displayName}}" tooltip-placement="right" ng-src="{{story.fields.assignee.avatarUrls.48x48}}" ng-class="{'no-img': story.fields.assignee === null}" height="48" width="48">
+						</div>
+						<div class ="story-comment">
+							<p>{{story.fields.summary}}</p>
+							<span class="story-contributor">{{story.fields.assignee.displayName}}</span>
+							<span>{{formatResolutionDate(story.fields.resolutiondate)}}</span>
+							<span ng-hide="workType == 1">{{workTypeToString()}}: {{workType == 3 ? getValue(story, workType).toFixed(2) : getValue(story, workType)}}</span>
+						</div>
+					</li>
+				</ul>
+			</div>
+		</div>	
 
 	</div>
 </body>
