--- a/src/main/resources/css/EpicPlugin.css
+++ b/src/main/resources/css/EpicPlugin.css
@@ -181,6 +181,62 @@
 	overflow: hidden;
 }
 
+.project-header {
+	padding: 0 10%;
+	max-height: 100px;
+	transition: all .5s linear;
+}
+
+.project-header-bar {
+	width: 100%;
+	height: 20px;
+	position: absolute;
+	top: -20px;
+}
+
+.project-header-opener {
+	position: absolute;
+	top: 3px;
+	left: calc(50% - 25px);
+	height: 15px;
+	width: 80px;
+	border: 1px solid #e5e5e5;
+	border-radius: 5px;
+	background: #fff;
+	cursor: pointer;
+	text-align: center;
+}
+
+.project-header > button {
+	display: none;
+}
+
+.project-header:hover > button {
+	display: block;
+}
+
+.project-header-opener:hover {
+	background: #e5e5e5;
+}
+
+.project-header.ng-hide {
+	max-height: 0;
+}
+
+.project-header > div {
+	float: left;
+	width: 25%;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	text-align: center;
+}
+
+.top-right {
+	position: absolute;
+	top: 6px;
+	right: 10px;
+}
+
 .column1 {
 	float: left;
 	width: 18%;
@@ -213,7 +269,7 @@
 	float: left;
 	width: 10%;
 	margin-right: 1%;
-	min-width: 142px;
+	min-width: 144px;
 }
 
 .last-update-container {
@@ -254,7 +310,8 @@
 
 .column3 {
 	float: left;
-	width: calc(76% - 110px);
+	width: calc(78% - 144px);
+	max-width: 69%;
 }
 
 .epic-list-container {
@@ -303,6 +360,7 @@ ul.inline .epic-container {
 	position: relative;
 	margin-right: 24px;
 	cursor: pointer;
+	transition: all .15s linear;
 }
 
 .epic-info-button {
@@ -332,6 +390,10 @@ ul.inline .epic-container {
 
 .epic-info-button.ng-hide-remove {
 	transition: all .5s linear;
+}
+
+.epic-info-button.ng-hide-add {
+	transition: all .25s linear;
 }
 
 .epic-info-button:before {
@@ -382,8 +444,6 @@ ul.inline .epic-container {
 
 .list {
 	padding-left: 0px;
-	display: flex;
-	flex-wrap: wrap;
 }
 
 .epic {
@@ -391,7 +451,6 @@ ul.inline .epic-container {
 	background-color: #fdf4bb;
 	color: #000000;
 	text-decoration: none;
-	z-index: 3;
 	margin-left: 5px;
 	margin-right: 5px;
 }
@@ -592,31 +651,6 @@ story:nth-child(5n) div {
     height: 0px;
 }
 
-/* Project row animations */
-
-.project-row.ng-move { 
-    transition: all 2s linear;
-    opacity: 0;
-    position: relative;
-    max-height: 0px;
-}
-
-.project-row.ng-move > .project-content,
-.project-row.ng-move > .project-content:before {
-	background-color: #6C3;
-	transition: all 2s linear;
-}
-
-.project-row.ng-move.ng-move-active {
-	max-height: 800px;
-	opacity: 1;
-}
-
-.project-row.ng-move.ng-move-active > .project-content,
-.project-row.ng-move.ng-move-active > .project-content:before {
-	background-color: white;
-}
-
 .loading-bar {
 	margin: 1px;
 	float: left;
@@ -687,6 +721,8 @@ story:nth-child(5n) div {
 
 .info-window {
 	padding: 15px;
+	max-height: 550px;
+	overflow-y: auto;
 }
 
 .info-window h1, h2 {
