--- a/src/main/resources/epicDetails.vm
+++ b/src/main/resources/epicDetails.vm
@@ -36,7 +36,7 @@
 			<button type="button" class="btn btn-warning dropdown-toggle">
 				{{projectName}} <span class="caret"></span>
 			</button>
-			<ul class="dropdown-menu epic-dropdown-menu" role="menu">
+			<ul class="dropdown-menu dropdown-menu-right epic-dropdown-menu" role="menu">
 				<li ng-hide="epics.length==0" ng-repeat="epic in epics" ng-click="redirect(epic.location)"><a href="#">{{epic.name}}</a></li>
 			</ul>
 		</div>
@@ -61,7 +61,9 @@
 		</div>
 		
 		<div class="column2">
-			<div>{{format(numofStories)}} {{workTypeToString()}} have been completed within the last 7 days.</div>
+			<div class="stories-completed">
+				{{workTypeToString()}} completed within the last 7 days: {{format(numofStories)}}
+			</div>
 			<div class="story-list">
 				<ul>
 					<li class="story-row" ng-repeat="story in stories">
